--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://www.gstatic.com/firebasejs/5.8.5/firebase.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
