--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,11 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script src="https://www.gstatic.com/firebasejs/5.8.5/firebase.js"></script>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDT2pyVN7KOKqoIhYXuhq479rk0lidHOSk&callback=initMap"
+      async
+      defer
+    ></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
